--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.infinitet3ch.jsonbr</groupId>
 	<artifactId>jsonb</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 
 	<name>JSONB java reflection</name>
 	<description>JSONB reflection for unofficial JSONB C library</description>
@@ -35,7 +35,7 @@
 		<connection>scm:git:git://github.com/nadirhamid/jsonb-java.git</connection>
 		<developerConnection>scm:git:git@github.com:nadirhamid/jsonb-java.git</developerConnection>
 		<url>https://github.com/nadirhamid/jsonb-java</url>
-		<tag>jsonb-0.1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
